# gearax

./: AGENTS.md  README.md  pyproject.toml
src/: data.py  helper.py  models.py  modules.py
src/gearax/: AGENTS.md  __init__.py  data.py  decorators.py  helper.py  meta.py  mixin.py  models.py  modules.py  trainer.py
tests/: AGENTS.md  test_meta.py  test_mixin.py  test_modules.py  test_serialization.py  test_trainer.py
