[project]
name = "gearax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yuanz", email = "yuanz271@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.11.12",
    "jax>=0.4.38",
    "jaxtyping>=0.2.38",
    "omegaconf>=2.3.0",
    "rich>=14.0.0",
]

[project.scripts]
gearax = "gearax:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
