[project]
name = "gearax"
version = "0.1.0"
description = "A JAX-based machine learning utilities package that provides essential tools for training neural networks with JAX and Equinox"
readme = "README.md"
authors = [{ name = "yuanz", email = "yuanz271@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.11.12",
    "jax>=0.4.38",
    "omegaconf>=2.3.0",
    "rich>=14.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gearax"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.1"]
